--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mod-10-2",
   "version": "1.0.0",
-  "description": "mod-10-2",
+  "description": "",
   "main": "Gruntfile.js",
   "scripts": {
     "test": "Grunt test"
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/rwart/mod-10-2#readme",
   "devDependencies": {
     "grunt": "^1.0.1",
-    "grunt-contrib-jshint": "^1.1.0"
+    "grunt-browser-sync": "^2.2.0",
+    "grunt-contrib-jshint": "^1.1.0",
+    "grunt-contrib-watch": "^1.0.0"
   }
 }
